--- a/app/src/main/res/layout/content_holdonact.xml
+++ b/app/src/main/res/layout/content_holdonact.xml
@@ -120,7 +120,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="36dp"
                 android:layout_marginBottom="454dp"
-                android:text="@string/eating" />
+                android:text="@string/singing" />
 
             <Button
                 android:id="@+id/viewbtn"
@@ -140,7 +140,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="36dp"
                 android:layout_marginBottom="454dp"
-                android:text="@string/travel" />
+                android:text="@string/disaccount" />
         </LinearLayout>
 
         <LinearLayout
