--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -9,7 +9,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,14 +21,13 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_marginTop="50dp"
                 android:id="@+id/textView53"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
                 android:gravity="center_horizontal|center"
                 android:text="@string/acttitle"
-                android:textSize="36sp"
-                />
+                android:textSize="36sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -36,7 +38,8 @@
             <ImageView
                 android:id="@+id/imageView25"
                 android:layout_width="match_parent"
-                android:layout_height="345dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="10dp"
                 android:paddingLeft="15dp"
                 app:srcCompat="@drawable/head" />
 
@@ -67,5 +70,12 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="206dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
