--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -53,7 +53,85 @@
             tools:context=".MapsActivity"
             tools:layout_editor_absoluteY="55dp" />
 
+        <EditText
+            android:id="@+id/editsuffer"
+            android:layout_width="202dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="75dp"
+            android:layout_marginEnd="400dp"
+            android:layout_marginRight="400dp"
+            android:background="@drawable/outside"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/drawer_layout"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button16"
+            android:layout_width="35dp"
+            android:layout_height="37dp"
+            android:layout_marginBottom="1280dp"
+            android:background="@drawable/p5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/editsuffer"
+            app:layout_constraintTop_toBottomOf="@+id/drawer_layout" />
+
+        <Button
+            android:id="@+id/ballbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginEnd="308dp"
+            android:layout_marginRight="308dp"
+            android:layout_marginBottom="543dp"
+            android:text="@string/ballsort"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/drawer_layout" />
+
+        <Button
+            android:id="@+id/eatbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:layout_marginEnd="500dp"
+            android:layout_marginRight="500dp"
+            android:text="@string/disaccount"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/drawer_layout"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/viewbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:layout_marginEnd="300dp"
+            android:layout_marginRight="300dp"
+            android:text="@string/singing"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/drawer_layout"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/tripbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="710dp"
+            android:layout_marginLeft="710dp"
+            android:layout_marginTop="140dp"
+            android:text="@string/information"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/drawer_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay"
@@ -69,89 +147,6 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </com.google.android.material.appbar.AppBarLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="0dp"
-            android:layout_height="90dp"
-            android:layout_marginTop="200dp"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/drawer_layout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <EditText
-                android:id="@+id/editsuffer"
-                android:layout_width="202dp"
-                android:layout_height="35dp"
-                android:layout_marginStart="91dp"
-                android:layout_marginLeft="91dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginBottom="18dp"
-                android:background="@drawable/outside"
-                android:inputType="text" />
-
-            <Button
-                android:id="@+id/button16"
-                android:layout_width="35dp"
-                android:layout_height="37dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="59dp"
-                android:layout_marginRight="59dp"
-                android:background="@drawable/p5" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout5"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="130dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <Button
-                android:id="@+id/ballbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="43dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="454dp"
-                android:text="@string/ballsort" />
-
-            <Button
-                android:id="@+id/eatbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="43dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="454dp"
-                android:text="@string/disaccount" />
-
-            <Button
-                android:id="@+id/viewbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="43dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="454dp"
-                android:text="@string/singing" />
-
-            <Button
-                android:id="@+id/tripbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="43dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="454dp"
-                android:text="@string/information" />
-        </LinearLayout>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
