--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -54,7 +54,7 @@
                 android:textSize="30sp" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/signupbtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/sigin"
