--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,44 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <androidx.drawerlayout.widget.DrawerLayout
-            android:id="@+id/drawer_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            tools:openDrawer="start">
-
-
-            <!--        <com.google.android.material.navigation.NavigationView-->
-            <!--        android:id="@+id/nav_iew"-->
-            <!--        android:layout_width="wrap_content"-->
-            <!--        android:layout_height="match_parent"-->
-            <!--        android:layout_gravity="start"-->
-            <!--        android:fitsSystemWindows="true"-->
-            <!--        app:headerLayout="@layout/nav_header_homepage"-->
-            <!--        app:menu="@menu/activity_homepage_drawer" />-->
-
-            <LinearLayout
-                android:id="@+id/nav_view"
-                android:layout_width="250dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="left"
-                android:orientation="horizontal">
-
-                <include
-                    layout="@layout/nav_header_main"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-            </LinearLayout>
-
-
-        </androidx.drawerlayout.widget.DrawerLayout>
 
         <fragment
             android:id="@+id/map"
@@ -53,78 +29,40 @@
             tools:context=".MapsActivity"
             tools:layout_editor_absoluteY="55dp" />
 
-        <EditText
-            android:id="@+id/editsuffer"
-            android:layout_width="202dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="75dp"
-            android:layout_marginEnd="400dp"
-            android:layout_marginRight="400dp"
-            android:background="@drawable/outside"
-            android:inputType="text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/drawer_layout"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/button16"
-            android:layout_width="35dp"
-            android:layout_height="37dp"
-            android:layout_marginBottom="1280dp"
-            android:background="@drawable/p5"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/editsuffer"
-            app:layout_constraintTop_toBottomOf="@+id/drawer_layout" />
-
-        <Button
-            android:id="@+id/ballbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:layout_marginEnd="308dp"
-            android:layout_marginRight="308dp"
-            android:text="@string/ballsort"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@id/guideline"
-            app:layout_constraintStart_toEndOf="@id/eatbtn"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <Button
             android:id="@+id/eatbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:layout_marginEnd="500dp"
-            android:layout_marginRight="500dp"
+            android:layout_marginTop="148dp"
             android:text="@string/disaccount"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/drawer_layout"
+            app:layout_constraintHorizontal_bias="0.034"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/viewbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:layout_marginEnd="300dp"
-            android:layout_marginRight="300dp"
+            android:layout_marginTop="148dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:text="@string/singing"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/drawer_layout"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/tripbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="710dp"
-            android:layout_marginTop="140dp"
+            android:layout_marginTop="148dp"
             android:text="@string/information"
             android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@id/drawer_layout"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/viewbtn"
+            app:layout_constraintHorizontal_bias="0.409"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.appbar.AppBarLayout
@@ -151,6 +89,41 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_end="206dp" />
+
+        <Button
+            android:id="@+id/ballbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="148dp"
+            android:text="@string/ballsort"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintHorizontal_bias="0.94"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/editsuffer"
+            android:layout_width="202dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="76dp"
+            android:layout_marginEnd="108dp"
+            android:layout_marginRight="108dp"
+            android:background="@drawable/outside"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button16"
+            android:layout_width="35dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginBottom="616dp"
+            android:background="@drawable/p5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/editsuffer" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
