--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -118,12 +118,13 @@
             android:id="@+id/button16"
             android:layout_width="35dp"
             android:layout_height="37dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
+            android:layout_marginTop="22dp"
             android:layout_marginBottom="616dp"
             android:background="@drawable/p5"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/editsuffer" />
+            app:layout_constraintStart_toEndOf="@+id/editsuffer"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
