--- a/app/src/main/res/layout/content_holdonact.xml
+++ b/app/src/main/res/layout/content_holdonact.xml
@@ -113,7 +113,7 @@
                 android:text="@string/ballsort" />
 
             <Button
-                android:id="@+id/eatbtn"
+                android:id="@+id/storebtn"
                 android:layout_width="66dp"
                 android:layout_height="43dp"
                 android:layout_marginStart="32dp"
@@ -123,7 +123,7 @@
                 android:text="@string/singing" />
 
             <Button
-                android:id="@+id/viewbtn"
+                android:id="@+id/ktvbtn"
                 android:layout_width="66dp"
                 android:layout_height="43dp"
                 android:layout_marginStart="32dp"
@@ -133,7 +133,7 @@
                 android:text="@string/information" />
 
             <Button
-                android:id="@+id/tripbtn"
+                android:id="@+id/informationbtn"
                 android:layout_width="66dp"
                 android:layout_height="43dp"
                 android:layout_marginStart="32dp"
