--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -14,60 +14,65 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="103dp"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView53"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
-                android:gravity="center_horizontal|center"
-                android:text="@string/acttitle"
-                android:textSize="36sp" />
-        </LinearLayout>
+                android:orientation="vertical" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="567dp"
-            android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="103dp"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView25"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="15dp"
-                app:srcCompat="@drawable/head" />
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="60dp"
+                        android:gravity="center_horizontal|center"
+                        android:text="@string/acttitle"
+                        android:textSize="36sp"
+                        android:scrollbars="vertical"/>
+                </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView54"
-                android:layout_width="354dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="@string/actdetail"
-                android:textSize="30sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="635dp"
+                    android:orientation="vertical">
 
-            <Button
-                android:id="@+id/signupbtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sigin"
-                android:textSize="24sp" />
-        </LinearLayout>
+                    <ImageView
+                        android:id="@+id/activityphoto"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:layout_marginTop="10dp"
+                        android:paddingLeft="15dp"
+                        app:srcCompat="@drawable/head" />
 
-        <LinearLayout
-            android:layout_width="408dp"
-            android:layout_height="59dp"
-            android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/activityContent"
+                        android:layout_width="354dp"
+                        android:layout_height="241dp"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:scrollbars="vertical"
+                        android:text="@string/actdetail"
+                        android:textSize="30sp" />
 
-            <include layout="@layout/bottom_bar" />
-        </LinearLayout>
+                    <Button
+                        android:id="@+id/signupbtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sigin"
+                        android:textSize="24sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 
