--- a/app/src/main/res/layout/content_createact.xml
+++ b/app/src/main/res/layout/content_createact.xml
@@ -256,6 +256,13 @@
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/button40"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:layout_weight="1"
+                android:text="提交" />
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
@@ -269,15 +276,5 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
-
-    <Button
-        android:id="@+id/button40"
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_weight="1"
-        android:text="提交"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
