--- a/app/src/main/res/layout/content_createact.xml
+++ b/app/src/main/res/layout/content_createact.xml
@@ -168,6 +168,8 @@
                     android:ems="10"
                     android:inputType="textPersonName" />
 
+
+
             </LinearLayout>
 
             <LinearLayout
@@ -218,12 +220,12 @@
                     android:text="活動封面"
                     android:textSize="24sp" />
 
-                <Button
-                    android:id="@+id/button14"
-                    android:layout_width="239dp"
-                    android:layout_height="wrap_content"
+                <ImageView
+                    android:id="@+id/imageView26"
+                    android:layout_width="238dp"
+                    android:layout_height="44dp"
                     android:layout_weight="1"
-                    android:text="上傳" />
+                    app:srcCompat="@drawable/ic_menu_gallery" />
 
             </LinearLayout>
 
@@ -276,5 +278,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
