--- a/app/src/main/res/layout/content_createact.xml
+++ b/app/src/main/res/layout/content_createact.xml
@@ -8,19 +8,14 @@
     tools:showIn="@layout/app_bar_createact">
 
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
-        android:layout_width="391dp"
-        android:layout_height="672dp"
-        android:fillViewport="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -169,7 +164,6 @@
                     android:inputType="textPersonName" />
 
 
-
             </LinearLayout>
 
             <LinearLayout
@@ -264,9 +258,8 @@
                 android:layout_height="57dp"
                 android:layout_weight="1"
                 android:text="提交" />
-
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 
     <fragment
         android:id="@+id/nav_host_fragment"
@@ -278,7 +271,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
