--- a/app/src/main/res/layout/content_favorite.xml
+++ b/app/src/main/res/layout/content_favorite.xml
@@ -35,7 +35,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView38"
+                    android:id="@+id/activityTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5sp"
