--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,31 +4,37 @@
     android:id="@+id/cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="1dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="10dp"
     app:cardBackgroundColor="#FFFFFF"
     app:cardCornerRadius="28dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="410dp"
+            android:id="@+id/activityy"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFFFFF"
+            android:background="#E0E0E0"
+            android:clickable="true"
             android:orientation="horizontal"
             android:padding="10sp">
 
             <TextView
                 android:id="@+id/activity"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/shape_textview" />
+                android:background="@drawable/shape_textview"
+                android:clickable="true"
+                android:textSize="24sp" />
 
         </LinearLayout>
     </LinearLayout>
